tests/ui/macros/macro-path-prelude-fail-1.stderr
error[E0433]: cannot find module `Vec` in this scope
  --> $DIR/macro-path-prelude-fail-1.rs:3:9
   |
LL |         Vec::clone!();
   |         ^^^ `Vec` is a struct, not a module

error[E0433]: cannot find module `u8` in this scope
  --> $DIR/macro-path-prelude-fail-1.rs:4:9
   |
LL |         u8::clone!();
   |         ^^ `u8` is a builtin type, not a module

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
